<resources>
    <string name="app_name">MyQuestQuiz_1</string>
    <dimen name="textSize_activity_start_rv_item">12sp</dimen>
    <dimen name="textSize_activity_start_Title">34sp</dimen>
    <dimen name="activity_question_info_edit_rv_item_BTN">8sp</dimen>
    <dimen name= "text_size_custom_Title">34sp</dimen>
    <dimen name= "text_size_custom_btn">10sp</dimen>
    <dimen name= "text_size_custom_text_1">12sp</dimen>
    <dimen name= "text_size_custom_text_2">20sp</dimen>
    <string name="AlertDialog_confirmWindows">Confirm Window</string>
    <string name="alertDialogMessage_questResult">Redirecting to results page\nTotal questions: %1$d\nCorrect answers: %2$d\nIncorrect or skipped: %3$d\nAnswer rate: %4$s%%</string>
    <string name="jumpTo">Jump To Start</string>
    <string name="ErrorBankNameCantBeEmpty">Error,Bank name can\'t be empty.</string>
    <string name="bankID">BankID : </string>
    <string name="bankName">BankName :</string>
    <string name="shuffledTitleON">Shuffled Title : ON</string>
    <string name="shuffledTitleOFF">Shuffled Title : OFF</string>
    <string name="shuffledOptionOn">ShuffledOption : ON</string>
    <string name="shuffledOptionOFF">ShuffledOption : OFF</string>
    <string name="titleNumConfirmed">Number of questions confirmed.</string>
    <string name="ErrorQuestionCantBeEmpty">Error, Questions List is Empty, please add a question first.</string>
    <string name="Confirm">Confirm</string>
    <string name="QuestionBankDeleteConfirm">Are you sure you want to delete this question bank?\nThis will delete the bank and all questions within</string>
    <string name="QuestionHasBeenDelete">Question Bank %1$s has been deleted</string>
    <string name="Cancel">Cancel</string>
    <string name="AnsCorrect">Correct, proceed to the next question.</string>
    <string name="AnsWrong">Wrong, proceed to the next question.</string>
    <string name="haveAnswered">You have already answered, proceed to the next question.</string>
    <string name="plzTypeOption">Please tap an option.</string>
    <string name="optionNhadConfirm">Option : %1$d，input completed.</string>
    <string name="Result">Result</string>
    <string name="gotEnd">End of questions.</string>
    <string name="bankBelong">BankBelong: </string>
    <string name="ErrorQuestionNameCantBeEmpty">Error, Question Name cannot be empty.</string>
    <string name="RestoreComplete">Save complete, you can return to the previous page or continue adding.</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_choose">Choose</string>
    <string name="TV_choiseAbank">Choose a question bank</string>
    <string-array name="activityNewQuestionSpinner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="plzInputBankName">Please enter the bank name</string>
    <string name="btn_addBank">Add Bank</string>
    <string name="btn_Detail">Detail</string>
    <string name="CurrentNumberOfQuestionsInQuestionBank">Current questions in the question bank:</string>
    <string name="plzInputNumOfQuestion">Please enter the number of questions you wish to test</string>
    <string name="ShuffledTitle">ShuffledTitle</string>
    <string name="ShuffledOption">ShuffledOption</string>
    <string name="btn_questStart">Start Quiz</string>
    <string name="questionsList">Questions List</string>
    <string name="btn_addNewQuestion">Add New Question</string>
    <string name="QuestionsOfQuest">Quiz Questions</string>
    <string name="btn_edit">Edit</string>
    <string name="questionID">"QuestionID: "</string>
    <string name="Progress">"Progress: "</string>
    <string name="NextQuestion">Next</string>
    <string name="optiion">"Option: "</string>
    <string name="questionTitle">Q:</string>
    <string name="NumOfQueestion">"NumOfQueestion: "</string>
    <string name="correctAns">Correct Ans:</string>
    <string name="save">SAVE</string>
    <string name="NunOfOption">NumOfOption</string>
</resources>